# lib_dzne_basetables

./: README.md  README.rst  pyproject.toml
src/lib_dzne_basetables/: __init__.py  _pattern.py  _utils.py  baseconv.py  common.py  data.py  table.py
