[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_dzne_basetables"
version = "0.4.1"
description = "Libary for basetables. "
license = { file = "LICENSE.txt" }
authors = [{ name = "Johannes", email = "johannes-programming@posteo.org" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['dzne']
dependencies = [
    'pandas>=1.4.2',
    "na_quantors>=1.0",
]
requires-python = ">=3.11"

[project.urls]
Source = "https://github.com/johannes-programming/lib_dzne_basetables"
Download = "https://pypi.org/project/lib-dzne-basetables/#files"